--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".OneTvApplication"
+        android:name=".MobileApplication"
          android:theme="@style/AppTheme" 
         android:label="@string/app_name" >
 
