--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,7 +9,11 @@
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.INTERNET" />
-
+	 <!-- 发布时修改的信息 -->
+     <!-- 渠道信息 -->
+    <meta-data android:name="CHANNEL" android:value="${channel_id}"/>
+     <!-- build日期 -->
+     <meta-data android:name="BUILD_DATE" android:value="20131020"/>
     <application
         android:icon="@drawable/ic_launcher"
         android:name=".MobileApplication"
