--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,7 +36,12 @@
         </activity>
          <activity
             android:name=".PlayerActivity"
+            android:launchMode="singleInstance"
             android:screenOrientation="landscape" />
+         <activity
+            android:name=".RemindActivity"
+            android:theme="@style/dialog"/>
+         <receiver android:name=".AlarmReceiver" android:process=":remote" />  
     </application>
 
 </manifest>
