--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="mobi.cangol.mobile.onetv"
-    android:versionCode="3"
-    android:versionName="1.0.3" >
+    android:versionCode="4"
+    android:versionName="1.0.4" >
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -17,10 +17,10 @@
          android:theme="@style/AppTheme" 
         android:label="@string/app_name" >
 		<!-- 发布时修改的信息 -->
-	     <!-- 渠道信息 -->
-	    <meta-data android:name="CHANNEL" android:value="${channel_id}"/>
-	     <!-- build日期 -->
-	     <meta-data android:name="BUILD_DATE" android:value="20131110"/>
+	    <!-- 渠道信息 -->
+        <meta-data android:name="PARTNER" android:value="SDK_PARTNER"/>
+        <!-- build日期 -->
+        <meta-data android:name="BUILD_DATE" android:value="20131114"/>
         <!-- Don't forgot InitActivity -->
         <activity
             android:name="io.vov.vitamio.activity.InitActivity"
